--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-body-highlighter": "^2.0.5",
+    "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.4.0"
