--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@libsql/client": "^0.15.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
