--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
     "next-themes": "^0.4.6",
+    "openai": "^6.9.1",
     "react": "19.2.0",
     "react-body-highlighter": "^2.0.5",
     "react-day-picker": "^9.11.2",
